[tool.poetry]
name = "openrdap"
version = "0.1.0"
description = ""
authors = ["Kiran Kumbhar <kiranpk189@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
flake8-import-order = "^0.18.1"
zimports = "^0.4.1"
flake8-bugbear = "^21.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
